...
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/home_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textSize="9sp" />
        <Button
            android:id="@+id/music_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Music"
            android:textSize="9sp" />
        <Button
            android:id="@+id/create_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Create"
            android:textSize="9sp" />
        <Button
            android:id="@+id/jams_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Jams"
            android:textSize="9sp" />
        <Button
            android:id="@+id/profile_button_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textSize="9sp" />

...
        android:orientation="vertical"
        android:layout_above="@id/bottom_button_layout"
        android:layout_below="@id/search_button"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/home_msg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cyclone Sounds"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:textSize="30sp"
            android:textColor="#fc0303" />

        <TextView
            android:id="@+id/home_username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{{username}}"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="80dp"
            android:textSize="30sp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/friends_button_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Friends"
            android:textSize="18sp" />

        <Button
            android:id="@+id/my_playlists_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="My Playlists"
            android:textSize="18sp" />

        <Button
            android:id="@+id/blind_review_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Blind Review"
            android:textSize="18sp" />

...
