...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsActivity">

    <Button
        android:id="@+id/pending_requests_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:text="View Requests" />

    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:text="Add Friend" />
...
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="You have no friends yet."
        android:visibility="gone" />

    <ListView
        android:id="@+id/friends_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/add_friend_button"
        android:layout_above="@+id/bottom_button_layout" />

    <LinearLayout
...
